# definitive-semantic-ver

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: major_release_check.yml  prerelease.yml  release.yml  sync-development.yml  sync_development.yml
.github/workflows/scripts/: check_breaking_changes.sh
src/math_project/: utils.py
